hphp/hack/test/typecheck/reactive/test_rx_classes1.php.exp
File "test_rx_classes1.php", line 22, characters 7-8:
Class C1 does not correctly implement all required members  (Typing[4203])
File "test_rx_classes1.php", line 22, characters 18-18:
Some members are incompatible with those declared in type A
Read the following to see why:
File "test_rx_classes1.php", line 24, characters 19-19:
Member f has the wrong type
File "test_rx_classes1.php", line 9, characters 19-19:
This function is local reactive.
File "test_rx_classes1.php", line 24, characters 19-19:
This function is non-reactive.
